@@ -1,3 +1,8 @@
+2004-12-11  Ben Elliston  <bje@au.ibm.com>
+
+	* fibheap.h (struct fibnode): Only use unsigned long bitfields
+	when __GNUC__ is defined and ints are less than 32-bits wide.
+
 2004-11-29  Tomer Levi  <Tomer.Levi@nsc.com>
 
 	* opcode/crx.h (enum operand_type): Rename rbase_cst4 to rbase_dispu4.
